metadata/force-app/main/default/objects/CustomName_QfYpr__c/CustomName_QfYpr__c.object-meta.xml
<CustomObject>
    <description>Description_iafqY</description>
    <label>CustomLabel_OJnEF</label>
    <nameField>
        <label>CustomLabel_OJnEF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OJnEFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>