metadata/force-app/main/default/objects/CustomName_QfYpr__c/fields/CustomField_ckben__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ckben__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGIDff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>