metadata/force-app/main/default/objects/CustomName_QfYpr__c/fields/CustomField_xiCfd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xiCfd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpYfjH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>